SCR #178667 - [Fix] vertical thumbs && animation thumbs && winner slider item on safari

--- a/src/modules/games/components/game-thumb/styles/themes/_default.scss
+++ b/src/modules/games/components/game-thumb/styles/themes/_default.scss
@@ -21,6 +21,10 @@
         repeat: no-repeat;
     }
 
+    .wlc-body--browser-safari & {
+        -webkit-mask-image: -webkit-radial-gradient(white, black); /* stylelint-disable-line */
+    }
+
     .wlc-game-thumb {
 
         &__img {
